feat: GameController Test